--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <script src="js/app.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
     <script src="libs/snowfall.js" defer></script>
@@ -29,7 +29,7 @@
             <div class="layers__item layer-6" style="background-image: url(img/layer-4.png);"></div>
         </div>
     </section>
-    
+
 </body>
 
 </html>
